package com.qiding.design;

public interface Flyweight {
      void operation(UnShareableFlyweight unShareableFlyweight);
}
