package com.qiding.design;

public class UnShareableFlyweight {
    private String info;

    public UnShareableFlyweight(String info) {
        this.info = info;
    }

    public String getInfo() {
        return info;
    }

    public void setInfo(String info) {
        this.info = info;
    }
}
